@@ -1,3 +1,9 @@
+[0, 15, 49]: 2018-08-05
+  - fix preservation of leading newlines in root level literal style scalar,
+    and preserve comment after literal style indicator (``|  # some comment``)
+    Both needed for round-tripping multi-doc streams in 
+    `ryd <https://pypi.org/project/ryd/>`__.
+
 [0, 15, 48]: 2018-08-03
   - housekeeping: ``oitnb`` for formatting, mypy 0.620 upgrade and conformity
 
